--- a/TitanicData.ipynb
+++ b/TitanicData.ipynb
@@ -72,45 +72,15 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "64335fdb1a57fce7"
+   "id": "e8130a2ef17ce79f"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-05T07:06:20.513005Z",
-     "start_time": "2025-03-05T07:06:20.505320Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Load dataset\n",
-    "file_path = \"/Users/pratigyajamakatel/Downloads/Titanic-Dataset.csv\"\n",
-    "\n",
-    "def load_data(file_path):\n",
-    "    try:\n",
-    "        df = pd.read_csv(file_path)\n",
-    "        print(\" Data loaded successfully!\")\n",
-    "        return df\n",
-    "    except FileNotFoundError:\n",
-    "        print(\" Error: File not found!\")\n",
-    "        return None\n",
-    "\n",
-    "# Run the load data function\n",
-    "df = load_data(file_path)\n"
-   ],
-   "id": "e458427093be2249",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Data loaded successfully!\n"
-     ]
-    }
-   ],
-   "execution_count": 25
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "64335fdb1a57fce7"
   },
   {
    "metadata": {},
@@ -121,8 +91,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-05T07:07:16.125011Z",
-     "start_time": "2025-03-05T07:07:16.113755Z"
+     "end_time": "2025-03-05T10:20:30.679002Z",
+     "start_time": "2025-03-05T10:20:30.643052Z"
     }
    },
    "cell_type": "code",
@@ -130,8 +100,7 @@
     "def basic_info(df):\n",
     "    print(\"\\nDataset Info:\")\n",
     "    print(df.info())\n",
-    "    print(\"\\nFirst 5 Rows:\")\n",
-    "    print(df.head())\n",
+    "\n",
     "\n",
     "# If data loaded successfully, display basic info\n",
     "if df is not None:\n",
@@ -147,50 +116,25 @@
       "Dataset Info:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 891 entries, 0 to 890\n",
-      "Data columns (total 12 columns):\n",
+      "Data columns (total 9 columns):\n",
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
       " 0   PassengerId  891 non-null    int64  \n",
       " 1   Survived     342 non-null    float64\n",
       " 2   Pclass       891 non-null    int64  \n",
-      " 3   Name         891 non-null    object \n",
-      " 4   Sex          891 non-null    object \n",
-      " 5   Age          714 non-null    float64\n",
-      " 6   SibSp        283 non-null    float64\n",
-      " 7   Parch        213 non-null    float64\n",
-      " 8   Ticket       891 non-null    object \n",
-      " 9   Fare         876 non-null    float64\n",
-      " 10  Cabin        204 non-null    object \n",
-      " 11  Embarked     889 non-null    object \n",
-      "dtypes: float64(5), int64(2), object(5)\n",
-      "memory usage: 83.7+ KB\n",
-      "None\n",
-      "\n",
-      "First 5 Rows:\n",
-      "   PassengerId  Survived  Pclass  \\\n",
-      "0            1       NaN       3   \n",
-      "1            2       1.0       1   \n",
-      "2            3       1.0       3   \n",
-      "3            4       1.0       1   \n",
-      "4            5       NaN       3   \n",
-      "\n",
-      "                                                Name     Sex   Age  SibSp  \\\n",
-      "0                            Braund, Mr. Owen Harris    male  22.0    1.0   \n",
-      "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0    1.0   \n",
-      "2                             Heikkinen, Miss. Laina  female  26.0    NaN   \n",
-      "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0    1.0   \n",
-      "4                           Allen, Mr. William Henry    male  35.0    NaN   \n",
-      "\n",
-      "   Parch            Ticket     Fare Cabin Embarked  \n",
-      "0    NaN         A/5 21171   7.2500   NaN        S  \n",
-      "1    NaN          PC 17599  71.2833   C85        C  \n",
-      "2    NaN  STON/O2. 3101282   7.9250   NaN        S  \n",
-      "3    NaN            113803  53.1000  C123        S  \n",
-      "4    NaN            373450   8.0500   NaN        S  \n"
+      " 3   Sex          891 non-null    object \n",
+      " 4   Age          891 non-null    float64\n",
+      " 5   SibSp        283 non-null    float64\n",
+      " 6   Parch        213 non-null    float64\n",
+      " 7   Embarked     891 non-null    object \n",
+      " 8   FamilySize   142 non-null    float64\n",
+      "dtypes: float64(5), int64(2), object(2)\n",
+      "memory usage: 62.8+ KB\n",
+      "None\n"
      ]
     }
    ],
-   "execution_count": 26
+   "execution_count": 57
   },
   {
    "metadata": {},
@@ -648,7 +592,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Feature Engineering: Creating new column \"FamilySize\"\n",
+    "# Feature Engineering: Creating new column \"FamilySize\n",
     "def feature_engineering(df):\n",
     "    df[\"FamilySize\"] = df[\"SibSp\"] + df[\"Parch\"] + 1\n",
     "    print(\"\\n🔹 Feature 'FamilySize' added!\")\n",
