--- a/TitanicData.ipynb
+++ b/TitanicData.ipynb
@@ -166,7 +166,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "🔹 Missing Values:\n",
+      " Missing Values:\n",
       "PassengerId      0\n",
       "Survived       549\n",
       "Pclass           0\n",
@@ -240,7 +240,7 @@
    "cell_type": "code",
    "source": [
     "def summary_statistics(df):\n",
-    "    print(\"\\n🔹 Summary Statistics:\")\n",
+    "    print(\"\\n Summary Statistics:\")\n",
     "    print(df.describe())\n",
     "\n",
     "# Display statistical summary\n",
@@ -254,7 +254,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "🔹 Summary Statistics:\n",
+      " Summary Statistics:\n",
       "       PassengerId  Survived      Pclass         Age       SibSp       Parch  \\\n",
       "count   891.000000     342.0  891.000000  891.000000  283.000000  213.000000   \n",
       "mean    446.000000       1.0    2.308642   29.361582    1.646643    1.596244   \n",
@@ -558,7 +558,7 @@
    "source": [
     "def feature_engineering(df):\n",
     "    df[\"FamilySize\"] = df[\"SibSp\"] + df[\"Parch\"] + 1\n",
-    "    print(\"\\n🔹 Feature 'FamilySize' added!\")\n",
+    "    print(\"\\n Feature 'FamilySize' added!\")\n",
     "    return df\n",
     "\n",
     "# Add family size feature\n",
@@ -572,7 +572,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "🔹 Feature 'FamilySize' added!\n"
+      " Feature 'FamilySize' added!\n"
      ]
     }
    ],
@@ -595,7 +595,7 @@
     "# Feature Engineering: Creating new column \"FamilySize\n",
     "def feature_engineering(df):\n",
     "    df[\"FamilySize\"] = df[\"SibSp\"] + df[\"Parch\"] + 1\n",
-    "    print(\"\\n🔹 Feature 'FamilySize' added!\")\n",
+    "    print(\"\\n Feature 'FamilySize' added!\")\n",
     "    return df\n",
     "\n",
     "# Visualize FamilySize distribution\n",
@@ -619,7 +619,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "🔹 Feature 'FamilySize' added!\n"
+      " Feature 'FamilySize' added!\n"
      ]
     },
     {
