--- a/TitanicData.ipynb
+++ b/TitanicData.ipynb
@@ -152,7 +152,7 @@
    "cell_type": "code",
    "source": [
     "def missing_values(df):\n",
-    "    print(\"\\n🔹 Missing Values:\")\n",
+    "    print(\"\\n Missing Values:\")\n",
     "    print(df.isnull().sum())\n",
     "\n",
     "# Check missing values in the dataset\n",
