--- a/TitanicData.ipynb
+++ b/TitanicData.ipynb
@@ -130,8 +130,8 @@
       " 8   FamilySize   142 non-null    float64\n",
       "dtypes: float64(5), int64(2), object(2)\n",
       "memory usage: 62.8+ KB\n",
-      "\n",
-      "\n",
+      "None\n"
+      
      ]
     }
    ],
